--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
     <title>KCR Cricket Academy | About</title>
 
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="assets/media/Cricket Logo.jpeg">
+    <link rel="shortcut icon" type="image/x-icon" href="assets/media/CricketLogo.jpeg">
 
 
     <!-- All CSS files -->
@@ -62,7 +62,7 @@
                         <div class="col-lg-8">
                             <div class="left-nav">
                                 <a href="index.html" class="navbar-brand m-0 p-0"><img alt
-                                        src="./assets/media/Cricket Logo.jpeg" style="width: 140px; height: 90px;"></a>
+                                        src="./assets/media/CricketLogo.jpeg" style="width: 140px; height: 90px;"></a>
                                 <ul class="navbar-nav m-0">
                                     <li class="menu-item"><a href="index.html">Home</a></li>
                                     <li class="menu-item"><a href="./about.html" class="active">ABOUT US</a></li>
@@ -78,7 +78,7 @@
             <div class="container-fluid">
                 <div class="mobile-menu">
                     <div>
-                        <a class="navbar-brand" href="index.html"><img alt src="./assets/media/Cricket Logo.jpeg" class="mobile-logo"></a>
+                        <a class="navbar-brand" href="index.html"><img alt src="./assets/media/CricketLogo.jpeg" class="mobile-logo"></a>
                     </div>
                     <div class="hamburger-menu">
                         <div class="bar"></div>
@@ -283,7 +283,7 @@
                             <div class="footer-about">
                                 <div class="logo">
                                     <a href="./index.html">
-                                        <img src="./assets/media/Cricket Logo.jpeg" style="width: 120px; height: 90px;"
+                                        <img src="./assets/media/CricketLogo.jpeg" style="width: 120px; height: 90px;"
                                             alt="">
                                     </a>
                                 </div>
