--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 
         <!-- Favicon -->
         <link rel="shortcut icon" type="image/x-icon"
-        href="assets/media/Cricket Logo.jpeg">
+        href="assets/media/CricketLogo.jpeg">
 
 
         <!-- All CSS files -->
@@ -58,7 +58,7 @@
                                 <div class="left-nav">
                                     <a href="index.html"
                                         class="navbar-brand m-0 p-0"><img alt
-                                        src="./assets/media/Cricket Logo.jpeg" style="width: 140px; height: 90px;"></a>
+                                        src="./assets/media/CricketLogo.jpeg" style="width: 140px; height: 90px;"></a>
                                     <ul class="navbar-nav m-0">
                                         <li class="menu-item"><a
                                                 href="index.html">Home</a></li>
@@ -79,7 +79,7 @@
                     <div class="mobile-menu">
                         <div>
                             <a class="navbar-brand" href="index.html"><img alt
-                                    src="./assets/media/Cricket Logo.jpeg" class="mobile-logo"></a>
+                                    src="./assets/media/CricketLogo.jpeg" class="mobile-logo"></a>
                         </div>
                         <div class="hamburger-menu">
                             <div class="bar"></div>
@@ -125,7 +125,7 @@
                             <div class="footer-about">
                                 <div class="logo">
                                     <a href="./index.html">
-                                        <img src="./assets/media/Cricket Logo.jpeg" style="width: 120px; height: 90px;" alt="">
+                                        <img src="./assets/media/CricketLogo.jpeg" style="width: 120px; height: 90px;" alt="">
                                     </a>
                                 </div>
                                 <p class="dark-gray">"With dedicated coaching, hard work, and <br>passion shaping tomorrow's cricketing legends."</p>
